WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56174
Table cells with dynamically added percentage height descendants do not grow in size if the table has already been laid out.
https://bugs.webkit.org/show_bug.cgi?id=56174
Summary
Table cells with dynamically added percentage height descendants do not grow ...
Andy Estes
Reported
2011-03-11 01:15:39 PST
Table cells with dynamically added percentage height descendants do not grow in size if the table has already been laid out.
Attachments
Test case
(996 bytes, text/html)
2011-03-11 01:18 PST
,
Andy Estes
no flags
Details
Patch
(7.87 KB, patch)
2011-03-11 01:48 PST
,
Andy Estes
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2011-03-11 01:18:25 PST
Created
attachment 85444
[details]
Test case
Andy Estes
Comment 2
2011-03-11 01:18:40 PST
<
rdar://problem/7863676
>
Andy Estes
Comment 3
2011-03-11 01:19:59 PST
Here is why I think this happens: Table cells ignore their specified size and collapse to fit their children. When the child div is added in the same run loop iteration as the table itself, the TD is sized appropriately (100% of the 100px TD). When the child div isn't present when the table is first laid out, the TD ignores its 100px sizing and collapses down. Then, when the child div is added in a separate run loop iteration, it is sized to be 100% of the collapsed TD instead of 100% of the TD's specified height of 100px.
Andy Estes
Comment 4
2011-03-11 01:48:13 PST
Created
attachment 85448
[details]
Patch
Dave Hyatt
Comment 5
2011-03-11 10:53:52 PST
Comment on
attachment 85448
[details]
Patch r=me
Andy Estes
Comment 6
2011-03-11 13:21:40 PST
Committed
r80878
: <
http://trac.webkit.org/changeset/80878
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug